Fix hmrc banner spacing

--- a/assets/components/header/_header.scss
+++ b/assets/components/header/_header.scss
@@ -9,7 +9,6 @@
 }
 
 .organisation-logo {
-  display: inline-block;
   padding: 3px 0 3px 30px;
   background: url("../images/crests/hmrc_crest_18px.png") 5px center no-repeat;
   border-left: 2px solid $hm-revenue-customs;
